; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_xnu_kernelcache.c_r_rebase_offset_to_paddr.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_xnu_kernelcache.c_r_rebase_offset_to_paddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%struct.section_t = type { i64, i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_5__*, %struct.section_t*, i64)* @r_rebase_offset_to_paddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @r_rebase_offset_to_paddr(%struct.TYPE_5__* %0, %struct.section_t* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.section_t*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.section_t* %1, %struct.section_t** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %7, align 8
  %16 = add nsw i64 %14, %15
  store i64 %16, i64* %8, align 8
  store i32 0, i32* %9, align 4
  br label %17

17:                                               ; preds = %68, %3
  %18 = load %struct.section_t*, %struct.section_t** %6, align 8
  %19 = load i32, i32* %9, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.section_t, %struct.section_t* %18, i64 %20
  %22 = getelementptr inbounds %struct.section_t, %struct.section_t* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  br i1 %25, label %26, label %71

26:                                               ; preds = %17
  %27 = load %struct.section_t*, %struct.section_t** %6, align 8
  %28 = load i32, i32* %9, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.section_t, %struct.section_t* %27, i64 %29
  %31 = getelementptr inbounds %struct.section_t, %struct.section_t* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* %8, align 8
  %34 = icmp sle i64 %32, %33
  br i1 %34, label %35, label %67

35:                                               ; preds = %26
  %36 = load i64, i64* %8, align 8
  %37 = load %struct.section_t*, %struct.section_t** %6, align 8
  %38 = load i32, i32* %9, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.section_t, %struct.section_t* %37, i64 %39
  %41 = getelementptr inbounds %struct.section_t, %struct.section_t* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = load %struct.section_t*, %struct.section_t** %6, align 8
  %44 = load i32, i32* %9, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.section_t, %struct.section_t* %43, i64 %45
  %47 = getelementptr inbounds %struct.section_t, %struct.section_t* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %42, %48
  %50 = icmp slt i64 %36, %49
  br i1 %50, label %51, label %67

51:                                               ; preds = %35
  %52 = load %struct.section_t*, %struct.section_t** %6, align 8
  %53 = load i32, i32* %9, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds %struct.section_t, %struct.section_t* %52, i64 %54
  %56 = getelementptr inbounds %struct.section_t, %struct.section_t* %55, i32 0, i32 2
  %57 = load i64, i64* %56, align 8
  %58 = load i64, i64* %8, align 8
  %59 = load %struct.section_t*, %struct.section_t** %6, align 8
  %60 = load i32, i32* %9, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds %struct.section_t, %struct.section_t* %59, i64 %61
  %63 = getelementptr inbounds %struct.section_t, %struct.section_t* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = sub nsw i64 %58, %64
  %66 = add nsw i64 %57, %65
  store i64 %66, i64* %4, align 8
  br label %73

67:                                               ; preds = %35, %26
  br label %68

68:                                               ; preds = %67
  %69 = load i32, i32* %9, align 4
  %70 = add nsw i32 %69, 1
  store i32 %70, i32* %9, align 4
  br label %17

71:                                               ; preds = %17
  %72 = load i64, i64* %7, align 8
  store i64 %72, i64* %4, align 8
  br label %73

73:                                               ; preds = %71, %51
  %74 = load i64, i64* %4, align 8
  ret i64 %74
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
